--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cz-emoji",
-  "version": "1.1.2",
+  "version": "1.1.3-beta",
   "description": "Commitizen adapter formatting commit messages using emojis.",
   "author": "Nicolas Gryman <ngryman@gmail.com> (http://ngryman.sh/)",
   "license": "MIT",
@@ -8,6 +8,9 @@
   "main": "index.js",
   "engines": {
     "node": ">=4"
+  },
+  "scripts": {
+    "pty": "prettier --write index.js"
   },
   "files": [
     "index.js",
@@ -26,5 +29,8 @@
     "pad": "^2.0.1",
     "read-pkg-up": "^2.0.0",
     "wrap-ansi": "^3.0.0"
+  },
+  "devDependencies": {
+    "prettier": "1.15.3"
   }
 }
